# QWeather-API-demo

./: .env.example  .gitattributes  .gitignore  QWeather_API_Documentation.md  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: USAGE.md  air_quality_current.md  air_quality_station.md  astronomy_moon.md  astronomy_solar_elevation.md  astronomy_sun.md  geo_city_lookup.md  geo_top_city.md  historical_weather.md  indices.md  minutely_precipitation.md  tropical_storm_forecast.md  tropical_storm_list.md  tropical_storm_track.md  warning.md  weather_daily.md  weather_hourly.md  weather_now.md
examples/: _common.py  example_air_quality_current.py  example_air_quality_station.py  example_astronomy_moon.py  example_astronomy_solar_elevation.py  example_astronomy_sun.py  example_geo_city_lookup.py  example_geo_top_city.py  example_historical_weather.py  example_indices.py  example_minutely_precipitation.py  example_tropical_storm_forecast.py  example_tropical_storm_list.py  example_tropical_storm_track.py  example_warning.py  example_weather_daily.py  example_weather_hourly.py  example_weather_now.py  run_all_apis.py
src/qweather_client/: __init__.py  api_air_quality_current.py  api_air_quality_station.py  api_astronomy_moon.py  api_astronomy_solar_elevation.py  api_astronomy_sun.py  api_geo_city_lookup.py  api_geo_top_city.py  api_historical_weather.py  api_indices.py  api_warning.py  (+8 more)
tests/: conftest.py  test_air_quality.py  test_astronomy.py  test_client.py  test_geo.py  test_minutely_indices.py  test_tropical.py  test_warning_historical.py  test_weather.py
